[package]
name = "kubus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.27"
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1", features = ["default", "sync", "macros", "rt", "rt-multi-thread"] }
regex = "1.11.1"
serde = "1.0.217"
log = "0.4.25"